Vip-asiakkaat -sisältö tietojen hallinnointiin

--- a/src/main/resources/templates/fragments/admin-nav.html
+++ b/src/main/resources/templates/fragments/admin-nav.html
@@ -32,6 +32,9 @@
         <li class="tuotespan4">
           <a th:href="@{/osastot}" class="nav-a">OSASTOT</a>
         </li>
+        <li class="tuotespan5">
+          <a th:href="@{/vip-asiakkaat}" class="nav-a">VIP-ASIAKKAAT</a>
+        </li>
       </ul>
     </nav>
   </body>
