--- a/src/main/resources/static/css/layout.css
+++ b/src/main/resources/static/css/layout.css
@@ -104,7 +104,7 @@ footer {
 
 .kauppa-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: auto;
   padding: 1rem;
   /* color: #4b4a4a; */
@@ -191,18 +191,27 @@ footer {
 
 .tuotteet-asemointi {
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .valmistajat-asemointi {
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .toimittajat-asemointi {
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .osastot-asemointi {
   padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.vip-asiakkaat-asemointi {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .tuotenappi {
@@ -235,7 +244,6 @@ footer {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: flex-end;
-  padding-right: 1rem;
 }
 
 .form-logout {
