--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -20,11 +20,14 @@
     </header>
 <div class="form-asemointi">
     <h3>Rekisteröidy Nooran kahvikaupan VIP-asiakkaaksi!</h3>
-    <p>Liittymällä VIP-asiakkaaksi saat uutiskirjemuodossa tietoa uusista tuotteistamme ja VIP-erikoistarjouksista ja -eduista sekä alan kiinnostavimmista tapahtumista.</p>
-    <p>VIP-asiakastietoja käytetään ainoastaan tiedotus- ja markkinointitarkoituksiin, eikä rekisteriin tietoja luovuteta ulkopuolisille.</p> 
-    <p>Toimintaamme ohjaavat voimassa oleva lainsäädäntö ja tietosuojasäännökset sekä yleinen hyvä viestintätapa.</p>
-    <p>Liity VIP-asiakkaaksi täyttämällä tietosi alla oleviin kenttiin ja lähettämällä lomake.</p> 
-    <p>Voit keskeyttää VIP-asiakkuuden milloin tahansa ottamalla yhteyttä asiakaspalveluumme.</p>
+    <br>
+    <p>Liittymällä VIP-asiakkaaksi saat uutiskirjemuodossa noin kerran kuukaudessa tietoa uusista tuotteistamme ja VIP-erikoistarjouksista ja -eduista sekä alan kiinnostavimmista tapahtumista.</p>
+    <br>
+    <p>VIP-asiakastietoja käytetään ainoastaan tiedotus- ja markkinointitarkoituksiin, eikä rekisterin tietoja luovuteta ulkopuolisille.</p> 
+    <p>Toimintaamme ohjaavat voimassa olevat tietosuojasäädökset sekä yleinen hyvä viestintätapa.</p>
+    <br>
+    <p><span class="text-bold">Liity VIP-asiakkaaksi täyttämällä tietosi alla oleviin kenttiin ja lähettämällä lomake.</span></p> 
+    <p>Voit halutessasi keskeyttää VIP-asiakkuuden milloin tahansa ottamalla yhteyttä <a href="mailto:info@kahvikauppa.net"><span class="teal-text">asiakaspalveluumme</span></a>.</p>
 
     <form class="pageview"
       action="#"
